log/build_2022-03-23_13-53-45/dbr_pubsub/stdout_stderr.log
running egg_info
writing ../../build/dbr_pubsub/dbr_pubsub.egg-info/PKG-INFO
writing dependency_links to ../../build/dbr_pubsub/dbr_pubsub.egg-info/dependency_links.txt
writing entry points to ../../build/dbr_pubsub/dbr_pubsub.egg-info/entry_points.txt
writing requirements to ../../build/dbr_pubsub/dbr_pubsub.egg-info/requires.txt
writing top-level names to ../../build/dbr_pubsub/dbr_pubsub.egg-info/top_level.txt
reading manifest file '../../build/dbr_pubsub/dbr_pubsub.egg-info/SOURCES.txt'
writing manifest file '../../build/dbr_pubsub/dbr_pubsub.egg-info/SOURCES.txt'
running build
running build_py
copying dbr_pubsub/rc_data_emu.py -> /home/nayab/dev_ws/build/dbr_pubsub/build/lib/dbr_pubsub
running install
running install_lib
copying /home/nayab/dev_ws/build/dbr_pubsub/build/lib/dbr_pubsub/rc_data_emu.py -> /home/nayab/dev_ws/install/dbr_pubsub/lib/python3.8/site-packages/dbr_pubsub
byte-compiling /home/nayab/dev_ws/install/dbr_pubsub/lib/python3.8/site-packages/dbr_pubsub/rc_data_emu.py to rc_data_emu.cpython-38.pyc
  File "/home/nayab/dev_ws/install/dbr_pubsub/lib/python3.8/site-packages/dbr_pubsub/rc_data_emu.py", line 26
    self.vcmd_sub_      =self.create_subscription(VehicleCommand 'vcmd', self.vcmd_callback, 10)
                                                                 ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/nayab/dev_ws/install/dbr_pubsub/lib/python3.8/site-packages/dbr_pubsub-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/dbr_pubsub/dbr_pubsub.egg-info to /home/nayab/dev_ws/install/dbr_pubsub/lib/python3.8/site-packages/dbr_pubsub-0.0.0-py3.8.egg-info
running install_scripts
Installing dbr_pub script to /home/nayab/dev_ws/install/dbr_pubsub/lib/dbr_pubsub
Installing rc_emu script to /home/nayab/dev_ws/install/dbr_pubsub/lib/dbr_pubsub
writing list of installed files to '/home/nayab/dev_ws/build/dbr_pubsub/install.log'
